# Camera-Calibration

./: #Makefile#  .gitignore  Makefile  Makefile~  README.md  calibration  calibration.cpp  calibration.h  main.cpp
configLists/: boxConfigs.xml  singleConfig.xml
extrinsics/: arucoStereoExtrinsics.yml  testOut.yml
imageLists/: boxFreehand.xml  intrinsicChessboard.yml  single.xml  singleAruco.xml  singleChessboardFull.xml  singleChessboardFull.yml  singleChessboardMix.xml  singleChessboardWebcam.xml  stereoAruco.xml  stereoArucobox.xml  stereoArucobox.yml  stereoChessboard.xml
images/singleChessboardWebcam/computed/: D0.xml  D1.xml  F.xml  K0.xml  K1.xml  R.xml  T.xml  log.txt
include/aruco-2.0.19/: aruco.pc.in
include/aruco-2.0.19/src/: ar_omp.cpp  checkrectcontour.h  ippe.cpp  ippe.h  levmarq.h  marker.cpp  marker.h  posetracker.cpp  posetracker.h
include/aruco-2.0.19/src/markerlabelers/: dictionary_based.h  svmmarkers.h
include/aruco-2.0.19/tests/: CMakeLists.txt  create_artag_hrm_dict.cpp  highlyreliablemarkers.cpp
include/aruco-2.0.19/utils/: aruco_print_marker.cpp  aruco_test.cpp
include/aruco-2.0.19/utils_calibration/: #aruco_calibration_fromimages.cpp#
include/aruco-2.0.19/utils_markermap/: CMakeCache.txt  CMakeLists.txt  aruco-uninstalled.pc  aruco.pc  aruco_test_markermap.cpp  cmake_install.cmake
include/aruco-2.0.19/utils_markermap/src/: Makefile  cmake_install.cmake  libaruco.so.2.0.19
include/aruco-2.0.19/utils_markermap/utils/: Makefile  aruco_print_dictionary  aruco_simple  aruco_tracker
include/aruco-2.0.19/utils_markermap/utils_calibration/: Makefile  cmake_install.cmake
include/aruco-2.0.19/utils_markermap/utils_markermap/: Makefile  aruco_create_markermap  aruco_markermap_pix2meters  aruco_test_markermap  aruco_unique_markermaps  config2.yml
input/arucoPatternConfigs/: boxConfig.yml  singleConfig.yml
input/configLists/: boxConfigs.xml  boxConfigs.yml  singleConfig.xml
input/configs/: config3.yml
input/imageLists/: intrinsicChessboard.yml  singleChessboardWebcam.xml  stereoArucoBox.yml  stereoArucobox.yml  stereoChessboard.yml
intrinsics/: arucoSingle.yml  box.yml  boxIntrinsics.yml  intrinsics.yml  intrinsics3.yml  intrinsicsNOD.yml  intrinsicsNODT.yml  testIn.yml  testIn2.yml  testInboi.yml
output/extrinsics/: arucoBoxExtrinsics.yml  chessboardExtrinsics.yml  exStereoArucobox.yml  exStereoChessboard.yml
output/intrinsics/: intrinsics.yml  intrinsics0.yml  intrinsics1.yml  intrinsics2.yml  intrinsics8.yml
resources/: opencv_CL.cpp  opencv_settings.xml
settings/: intrinsicChessboardSettings.yml  previewArucoBoxSettings.yml  previewArucoSingleSettings.yml  previewChessboardSettings.yml  settings.xml  settings.yml  settingsAruco.yml  settingsIntrinsicChessboard.xml  settingsIntrinsicChessboard.yml  settingsOutput.yml  settingsPreviewArucobox.xml  settingsPreviewArucobox.yml  settingsPreviewArucosingle.xml  settingsPreviewChessboard.xml  settingsPreviewChessboard.yml  settingsStereoAruco.xml  settingsStereoAruco.yml  settingsStereoArucobox.yml  settingsStereoChessboard.xml  settingsStereoChessboard.yml  stereoArucoBoxSettings.yml  stereoChessboardSettings.yml
src/: calibrateWithSettings.cpp  calibration.cpp  calibration.h  not super far gone.cpp
src/aruco-2.0.19/: CMakeLists.txt  ChangeLog  README  TODO  config.cmake.in
src/aruco-2.0.19/src/: CMakeLists.txt  cameraparameters.cpp  cvdrawingutils.cpp  dictionary.cpp  marker.cpp  marker.h  markerdetector.h  markerlabeler.h  markermap.cpp  markermap.h
src/aruco-2.0.19/tests/: extract_chilitag_dict.cpp  image2contourfile.cpp  mset2dict.cpp
src/aruco-2.0.19/utils/: aruco_print_dictionary.cpp  aruco_tracker.cpp  common.h
src/aruco-2.0.19/utils_calibration/: CMakeLists.txt  aruco_calibration.cpp  aruco_calibration_board_a4.h  aruco_calibration_fromimages.cpp
src/aruco-2.0.19/utils_gl/: CMakeLists.txt  aruco_test_gl.cpp
src/aruco-2.0.19/utils_markermap/: CMakeLists.txt  aruco_create_markermap.cpp  pcdwriter.cpp
src/arucocustom/: CMakeLists.txt  CMakeLists.txt~
src/arucocustom/src/: CMakeLists.txt  checkrectcontour.cpp  dictionary.h  markerdetector.cpp  markerlabeler.cpp
src/arucocustom/src/markerlabelers/: dictionary_based.cpp  svmmarkers.cpp
src/arucocustom/tests/: compute_dist_distance.cpp  create_aruco_dict.cpp  highlyreliablemarkers.h
src/arucocustom/utils/: CMakeLists.txt  aruco_simple.cpp
src/arucocustom/utils_calibration/: .#aruco_calibration_fromimages.cpp  CMakeLists.txt  aruco_calibration_fromimages.cpp  config1.yml
src/arucocustom/utils_gl/: aruco_test_markermap_gl.cpp
src/arucocustom/utils_markermap/: Makefile  aruco_markermap_pix2meters.cpp  aruco_simple_markermap.cpp  aruco_unique_markermaps.cpp  cmake_uninstall.cmake
src/arucocustom/utils_markermap/src/: libaruco.so.2.0
src/arucocustom/utils_markermap/utils/: aruco_print_marker  aruco_test  cmake_install.cmake
utils/: canny  canny.cpp  createArucoPatterns  createArucoPatterns.cpp  createUniqueMarkermaps  createUniqueMarkermaps.cpp  imagelist_creator  imdiff  imdiff.cpp  imdiff.cpp~  imginfo  imginfo.cpp  imginfo2.cpp  readwrite  readwrite.cpp  readwrite.cpp~  showimg  showimg.cpp  showimg.cpp~  showvideo  showvideo.cpp  showvideo.cpp~  smooth  smooth.cpp  smooth.cpp~  videoedges  videoedges.cpp  videoedges.cpp~
utils/opencvExamples/: camera_calibration.cpp
(+3 files in other folders)
